# r_jq

./: .gitignore  Cargo.toml  LICENCE  README.md
cli/: Cargo.toml
cli/src/: main.rs
rjq/: Cargo.toml  README.md
rjq/src/: main.rs  pretty_print.rs
src/: action.rs  block.rs  command.rs  errors.rs  has_type.rs  index_type.rs  jq_peg.rs  key_type.rs  lib.rs  main.rs  operator.rs  query.rs  range.rs  range_type.rs  token.rs
src/eval/: add.rs  divide.rs  equality.rs  equate.rs  mod.rs  multiply.rs  subtract.rs
src/function/: evaluate.rs  has.rs  keys.rs  length.rs  mod.rs  recurse.rs  select.rs
src/types/: atom_type.rs  expression_type.rs  has_type.rs  mod.rs
test/: basic.json
