[package]
name = "r_jq"
version = "0.2.0"
edition = "2021"
description = "Rust version of jq"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"

[workspace]
members = ["rjq"]
